--- a/tools/index.html
+++ b/tools/index.html
@@ -18,6 +18,11 @@
             width: calc(100% - 10px);
             height: auto;
             resize: none;
+            overflow-y: hidden;
+        }
+        input[type='text'] {
+            width: 100%;
+
         }
         p {
             margin: 0;
