--- a/tools/index.html
+++ b/tools/index.html
@@ -39,15 +39,25 @@
             gap: 5px;
             align-items: baseline;
         }
-        #replacementTool {
+        #floating {
             position: fixed;
+            display: flex;
+            flex-direction: column;
             top: 10px;
             right: 10px;
-            background-color: #f1f1f1;
-            padding: 20px;
-            border: 1px solid #ccc;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            gap: 5px;   
             div {
+                position: relative;
+                background-color: #f1f1f1;
+                padding: 20px;
+                border: 1px solid #ccc;
+                box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            }
+        }
+        #replacementTool {
+            div {
+                border: none;
+                box-shadow: none;
                 display: flex;
                 align-items: center;
                 gap: 5px;
@@ -56,25 +66,29 @@
     </style>
 </head>
 <body>
-    <h2>Upload the JSON file</h2>
-    <input type="file" id="fileInput" class="styledButton" accept="application/json" />
-    <button id="saveButton1" class="styledButton" onClick="save()" disabled>Save</button>
-    <button id="saveButton2" class="styledButton" onClick="saveAsLua()" disabled>Save as Lua file</button>
-    <button id="updateAllButton" class="styledButton" onclick="updateAll()" disabled>Update ALL!</button>
     <div id="mainContainer"></div>
-    <div id="replacementTool">
-        <div>
-            <h2>Text Replacement Tool</h2>
-            <label for="useRegExp">
-                (<input type="checkbox" id="useRegExp"> RegExp)
-            </label>
+    <div id="floating">
+        <div id="loadingBox">
+            <input type="file" id="fileInput" class="styledButton" accept="application/json" />
+            <button id="saveButton1" class="styledButton" onClick="save()" disabled>Save</button>
+            <button id="saveButton2" class="styledButton" onClick="saveAsLua()" disabled>Save as Lua file</button>
+            <button id="updateAllButton" class="styledButton" onclick="updateAll()" disabled>Update ALL!</button>
         </div>
-        <label for="findText">Find:</label>
-        <input type="text" id="findText" placeholder=""><br>        
-        <label for="replaceText">Replace with:</label>
-        <input type="text" id="replaceText" placeholder=""><br>        
-        <button onclick="replace()">Apply</button>
-      </div>
+        <div id="replacementTool">
+            <div>
+                <h2>Text Replacement Tool</h2>
+                <label for="useRegExp">
+                    (<input type="checkbox" id="useRegExp"> RegExp)
+                </label>
+            </div>
+            <label for="findText">Find:</label>
+            <input type="text" id="findText" placeholder=""><br>        
+            <label for="replaceText">Replace with:</label>
+            <input type="text" id="replaceText" placeholder=""><br><br>        
+            <button onclick="replace()">Apply</button>
+        </div>
+    </div>
+    
     <script src="script.js"></script>
 </body>
 </html>
