Update font (fix z, add more characters but they do not work), Add ending quotes translation, Add font to the tool, Change json format

--- a/tools/index.html
+++ b/tools/index.html
@@ -5,6 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
+        @font-face {
+            font-family: 'balatro';
+            src: url('../fonts/m6x11plus_vi.ttf') format('truetype');
+        }
+        #mainContainer {
+            font-family: 'balatro', sans-serif;
+            textarea, input {
+                font-family: 'balatro', sans-serif;
+            }
+        }
         .objectContainer {
             border: 1px solid black;
             margin: 5px;
